# docker-dns-rs

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  cliff.toml  clippy.toml  cog.toml  docker-dns  package-lock.json  package.json  project-words.txt  spellcheck.dic
.github/scripts/: cleanup-containers.sh
.github/workflows/: build.yml  ci.yml  compare-release-image.yml  retag-containers-after-push.yml  retag-containers-after-release.yml  rust.yml  semgrep.yml
build-scripts/: build.sh  setup-env.sh
crates/docker-dns-rs/: Cargo.toml
crates/docker-dns-rs/src/: args.rs  dns_listener.rs  docker.rs  encoding.rs  filters.rs  http_client.rs  main.rs  models.rs  signal_handlers.rs  table.rs  utils.rs
crates/docker-dns-rs/src/docker/: config.rs  daemon.rs  monitor.rs
crates/docker-dns-rs/src/models/: container.rs  container_inspect.rs  network.rs
crates/docker-dns-rs/src/utils/: env.rs
src/: args.rs  dns_listener.rs  docker.rs  encoding.rs  env.rs  filters.rs  http_client.rs  main.rs  signal_handlers.rs  table.rs  utils.rs
src/docker/: config.rs  daemon.rs  docker.rs  docker_config.rs  docker_monitor.rs  mod.rs  monitor.rs
src/models/: container_inspect.rs  mod.rs
src/utils/: env.rs  mod.rs
