[package]
name = "docker-dns-rs"
# don't change this, it's updated before an actual build by update-version.sh
version = "0.0.0-development"
edition = "2021"
rust-version = "1.80.0"
authors = ["Kristof Mattei"]
description = "Rust end-to-end application"
license-file = "LICENSE"
categories = ["starter", "end-to-end"]
keywords = ["integrity", "end-to-end", "starter", "docker", "release"]
repository = "https://github.com/kristof-mattei/docker-dns-rs"

[lints.clippy]
# don't stop from compiling / running
all = "warn"
pedantic = "warn"
cargo = "warn"
# this one causes confusion when combining variables (`foo`) and
# dereferenced variables (`foo.bar`). The latter cannot be inlined
# so we don't inline anything
uninlined-format-args = { level = "allow", priority = 127 }

[lints.rust]
let_underscore_drop = { level = "deny", priority = 127 }
non_ascii_idents = { level = "deny", priority = 127 }

[profile.dev.package.backtrace]
opt-level = 3

[features]
coverage = []

[dependencies]
bytes = { version = "1.7.1", features = ["serde"] }
clap = { version = "4.5.14", features = ["derive"] }
color-eyre = "0.6.3"
hickory-server = "0.24.1"
http = "1.1.0"
http-body-util = "0.1.2"
hyper = { version = "1.4.1", default-features = false }
hyper-tls = { version = "0.6.0", default-features = false, features = [
    "vendored",
] }
hyper-unix-socket = "0.0.0-development"
hyper-util = { version = "0.1.7", default-features = false, features = [
    "client-legacy",
    "http1",
    "tokio",
] }
ipnet = "2.9.0"
once_cell = "1.19.0"
percent-encoding = "2.3.1"
regex = "1.10.6"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "time",
    "tracing-log",
] }
tokio = { version = "1.39.2", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "signal",
    "net",
] }
tokio-util = "0.7.11"
url = "2.5.2"

# We compile the Docker container with musl to get a static library. Smaller, faster.
# BUT that means that we need to include openssl
# Documentation on the syntax:
# https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#platform-specific-dependencies
[target.'cfg(all(target_env="musl"))'.dependencies]
openssl = { version = "0.10.66", features = ["vendored"] }
