[package]
name = "docker-dns-rs"
# don't change this, it's updated before an actual build by update-version.sh
version = "0.0.0-development"
edition = "2024"
rust-version = "1.86.0"
authors = ["Kristof Mattei"]
description = "Rust end-to-end application"
license-file = "LICENSE"
categories = ["starter", "end-to-end"]
keywords = ["integrity", "end-to-end", "starter", "docker", "release"]
repository = "https://github.com/kristof-mattei/docker-dns-rs"

[lints.clippy]
# don't stop from compiling / running
all = "warn"
cargo = "warn"
complexity = "warn"
correctness = "warn"
pedantic = "warn"
perf = "warn"
# restriction = "warn"
style = "warn"
suspicious = "warn"

# this one is debatable. continue is used in places to be explicit, and to guard against
# issues when refactoring
needless_continue = { level = "allow", priority = 127 }
# this one causes confusion when combining variables (`foo`) and
# dereferenced variables (`foo.bar`). The latter cannot be inlined
# so we don't inline anything
uninlined-format-args = { level = "allow", priority = 127 }

[lints.rust]
let_underscore_drop = { level = "deny", priority = 127 }
non_ascii_idents = { level = "deny", priority = 127 }

[features]
default = ["tokio-console"]
tokio-console = ["dep:console-subscriber", "dep:tokio-console"]

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
color-eyre = "0.6.4"
console-subscriber = { version = "0.4.1", optional = true }
hickory-server = "0.25.1"
http = "1.3.1"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", default-features = false }
hyper-tls = { version = "0.6.0", default-features = false, features = [
    "vendored",
] }
hyper-unix-socket = "0.3.0"
hyper-util = { version = "0.1.11", default-features = false, features = [
    "client-legacy",
    "http1",
    "tokio",
] }
ipnet = "2.11.0"
percent-encoding = "2.3.1"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "signal",
    "net",
] }
tokio-console = { version = "0.1.13", optional = true }
tokio-util = { version = "0.7.15", features = ["rt"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "time",
    "tracing-log",
] }

# OpenSSL for musl
[target.'cfg(all(any(target_arch="x86_64", target_arch="aarch64"), target_os="linux", target_env="musl"))'.dependencies]
openssl = { version = "0.10.72", features = ["vendored"] }
