[package]
name = "docker-dns-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
include.workspace = true
build = "src/build.rs"

[features]
default = ["tokio-console"]
tokio-console = ["dep:console-subscriber"]

[dependencies]
async-trait = "0.1.89"
clap = { version = "4.6.1", features = ["derive", "env"] }
color-eyre = "0.6.5"
console-subscriber = { version = "0.5.0", optional = true }
hashbrown = { version = "0.17.0", default-features = false, features = [
    "default-hasher",
    "equivalent",
    "inline-more",
    "serde",
] }
hickory-server = "0.26.0"
ipnet = { version = "2.12.0", features = ["serde"] }
itertools = "0.14.0"
mimalloc = { version = "0.1.48", features = ["v3"] }
pretty_assertions = "1.4.1"
regex = "1.12.3"
tokio = { version = "1.52.1", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "signal",
    "net",
] }
tokio-util = { version = "0.7.18", features = ["rt"] }
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.23", features = [
    "env-filter",
    "time",
    "tracing-log",
] }
twistlock = { git = "https://github.com/kristof-mattei/twistlock", branch = "main" }

[dev-dependencies]
pretty_assertions = "=1.4.1"

[package.metadata.cargo-machete]
ignored = ["tokio-console"]

[lints]
workspace = true
